--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "dev": "nuxt"
   },
   "dependencies": {
-    "nuxt": "^2.4.5"
+    "axios": "^0.18.0",
+    "nuxt": "^2.4.5",
+    "vue-notifications": "^0.9.0",
+    "zantui": "^1.0.2"
   }
 }
